--- a/resources/base/index.html
+++ b/resources/base/index.html
@@ -6,10 +6,10 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         
-        <script src="" async defer></script>
+        <script src="js/main.js" async defer></script>
     </body>
 </html>
